Refactor code style for local final usage (#38908)
* Refactor code style for local final usage

- Remove meaningless final modifiers from local and loop variables
- Drop redundant constructor and override Javadocs
- Adjust declaration placement to satisfy Checkstyle

* Refactor code style for local final usage

- Remove meaningless final modifiers from local and loop variables
- Drop redundant constructor and override Javadocs
- Adjust declaration placement to satisfy Checkstyle